--- a/src/main/resources/templates/common/headerOrg.html
+++ b/src/main/resources/templates/common/headerOrg.html
@@ -29,6 +29,13 @@
                         <a href="#Ratings" class="nav-link">Ratings</a>
                     </li>
                 </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item ms-lg-3">
+                        <a th:href="@{/user/logout}" class="btn btn-danger py-2 px-3 border-2 rounded-1">
+                            Logout
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
