--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -23,7 +23,7 @@
                         <a th:href="@{/volunteerOpp/search}" class="nav-link">Volunteer Opportunity</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a href="#Ratings" class="nav-link">Ratings</a>
+                        <a th:href="@{/taskRatings/ratings}" class="nav-link">Ratings</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
