--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div th:fragment="footer">
-        <footer class="mt-3 pt-3 bg-dark text-light">
+        <footer class="mt-auto pt-3 bg-dark text-light">
             <div class="container-fluid px-5">
                 <div class="row justify-content-between">
                     <div class="col-sm text-center text-md-start">
