--- a/src/main/resources/templates/createVolOpp.html
+++ b/src/main/resources/templates/createVolOpp.html
@@ -10,12 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
 
-        body::before {
-    display: block;
-    content: "";
-    height: 60px;
-}
-
 html,
 body {
     height: 100%;
@@ -29,6 +23,7 @@ body {
 }
 
         main {
+            margin-top:60px;
             flex-grow: 1;
             display: flex; /* Make it a flex container */
             justify-content: center; /* Center horizontally */
