--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -7,12 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        body::before {
-            display: block;
-            content: "";
-            height: 60px;
-        }
-
         html,
         body {
             margin: 0;
@@ -26,6 +20,7 @@
         }
 
         main {
+            margin-top: 60px;
             flex-grow: 1;
             display: flex; /* Make it a flex container */
             justify-content: center; /* Center horizontally */
@@ -53,8 +48,8 @@
     <div th:replace="~{common/header :: header}"></div>
 
     <main>
-        <section class="d-flex align-items-center justify-content-center" style="min-height: 100vh;">
-            <div class="container px-4">
+        <section class="pe-3" id="learn">
+            <div class="container-fluid px-4">
                 <div class="form-container">
                     <form th:action="@{/user/login}" th:object="${userRequest}" method="post">
                         <h3 class="text-center mb-4">Login</h3>
