--- a/src/main/resources/templates/registerPage.html
+++ b/src/main/resources/templates/registerPage.html
@@ -8,11 +8,6 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
-        body::before {
-      display: block;
-      content: "";
-      height: 60px;
-  }
 
   html,
   body {
@@ -27,6 +22,7 @@
   }
 
           main {
+              margin-top:60px;
               flex-grow: 1;
               display: flex; /* Make it a flex container */
               justify-content: center; /* Center horizontally */
