--- a/src/main/resources/templates/common/headerOrg.html
+++ b/src/main/resources/templates/common/headerOrg.html
@@ -61,6 +61,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a class="dropdown-item" th:href="@{/test/changePassword}">
+                                    <i class="bi bi-pencil me-2"></i> Change Password
+                                </a>
+                            </li>
+                            <li>
                                 <a class="dropdown-item text-danger" th:href="@{/test/accDelete}">
                                     <i class="bi bi-trash me-2"></i> Delete Account
                                 </a>
