--- a/src/main/resources/templates/common/volOppCard.html
+++ b/src/main/resources/templates/common/volOppCard.html
@@ -13,10 +13,10 @@
             <div class="card-body">
                 <h5 class="card-title text-primary" th:text="${volopp.title}">Food Drive for Homeless</h5>
                 <p class="card-text text-muted">
-                    <i class="bi bi-info-circle me-1"></i> <span th:text="${volopp.description}">
+                    <i class="bi bi-info-circle me-1"></i> <srpan th:text="${volopp.description}">
                     Help us distribute food and essentials to those in
                     need.
-                </span>
+                </srpan>
                 </p>
                 <p><i class="bi bi-geo-alt me-1"></i> <strong>Location : </strong> <span th:text="${volopp.location}"> </span></p>
                 <p><i class="bi bi-building me-1"></i> <strong>Organization : </strong>  <span th:text="${volopp.organizationName}"> </span></p>
