--- a/src/main/resources/templates/detailsVolOpp.html
+++ b/src/main/resources/templates/detailsVolOpp.html
@@ -65,7 +65,6 @@
     <main>
         <div class="container">
 
-
             <div class="mt-2 row justify-content-center">
                 <div class="col-md-8">
                     <!-- Success Message -->
@@ -86,37 +85,50 @@
                             <h3 class="card-title text-primary">Title: <span th:text="${volOpp.title}"></span>
                             </h3>
 
-                            <div sec:authorize="isAnonymous()">
-                                <div class="my-3">
-                                    <a class="btn btn-success fs-5 py-2 px-3 border-2 rounded-1"
-                                       th:href="@{/test/login}"
-                                       type="button">
-                                        Register
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div sec:authorize="isAuthenticated()">
-                                <div sec:authorize="hasRole('ROLE_VOLUNTEER')">
+                            <div th:if="${volOpp.status.toString()} == 'ACTIVE'">
+                                <div sec:authorize="isAnonymous()">
                                     <div class="my-3">
-                                        <form method="post" th:action="@{/taskSignups/cancel}" th:if="${isRegistered}">
-                                            <input name="taskId" th:value="${volOpp.taskId}" type="hidden"/>
-                                            <button class="btn btn-danger fs-5 py-2 px-3 border-2 rounded-1"
-                                                    type="submit">
-                                                Cancel Registration
-                                            </button>
-                                        </form>
+                                        <a class="btn btn-success fs-5 py-2 px-3 border-2 rounded-1"
+                                           th:href="@{/test/login}"
+                                           type="button">
+                                            Register
+                                        </a>
+                                    </div>
+                                </div>
 
-                                        <form method="post" th:action="@{/taskSignups/create}" th:if="${!isRegistered}">
-                                            <input name="taskId" th:value="${volOpp.taskId}" type="hidden"/>
-                                            <button class="btn btn-success fs-5 py-2 px-3 border-2 rounded-1"
-                                                    type="submit">
-                                                Register
-                                            </button>
-                                        </form>
+                                <div sec:authorize="isAuthenticated()">
+                                    <div sec:authorize="hasRole('ROLE_VOLUNTEER')">
+                                        <div class="my-3">
+                                            <form method="post" th:action="@{/taskSignups/cancel}"
+                                                  th:if="${isRegistered}">
+                                                <input name="taskId" th:value="${volOpp.taskId}" type="hidden"/>
+                                                <button class="btn btn-danger fs-5 py-2 px-3 border-2 rounded-1"
+                                                        type="submit">
+                                                    Cancel Registration
+                                                </button>
+                                            </form>
+
+                                            <form method="post" th:action="@{/taskSignups/create}"
+                                                  th:if="${!isRegistered}">
+                                                <input name="taskId" th:value="${volOpp.taskId}" type="hidden"/>
+                                                <button class="btn btn-success fs-5 py-2 px-3 border-2 rounded-1"
+                                                        type="submit">
+                                                    Register
+                                                </button>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <div th:if="${volOpp.status.toString()} != 'ACTIVE'">
+                                <div class="my-3">
+                                    <button class="btn btn-secondary fs-5 py-2 px-3 border-2 rounded-1 opacity-50" disabled>
+                                        Registration Closed
+                                    </button>
+
+                                </div>
+                            </div>
+
 
                             <p><strong>Organization : </strong> <span th:text="${volOpp.organizationName}">Green Earth Society</span>
                             </p>
