--- a/src/main/resources/templates/participationHistory.html
+++ b/src/main/resources/templates/participationHistory.html
@@ -34,7 +34,15 @@
     <main>
         <div class="container">
             <h2 class="h2 mt-5 mb-3">Participation History</h2>
+            <!-- Success Message -->
+            <div th:if="${successMessage}" class="alert alert-success" role="alert">
+                <span th:text="${successMessage}"></span>
+            </div>
 
+            <!-- Error Message -->
+            <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+                <span th:text="${errorMessage}"></span>
+            </div>
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead class="thead-light">
