--- a/src/main/resources/templates/ratingsPage.html
+++ b/src/main/resources/templates/ratingsPage.html
@@ -32,18 +32,20 @@
         </div>
     </div>
     <main>
-        <div class="container">
+        <div class="container-fluid px-5">
             <div class="row mt-5 justify-content-around">
-                <div class="col-md p-5">
-                    <p class="lead text-dark fw-semibold">
-                        WELCOME,
-                    </p>
-                    <h2 class="fw-bold fs-1 mb-4">BUILDING STRONGER <br/> COMMUNITIES, TOGETHER</h2>
-                    <h6 class="fw-bold fs-3 mb-4">Top Volunteers & Organizations</h6>
+                <div sec:authorize="isAnonymous()">
+                    <div class="col-md p-5">
+                        <p class="lead text-dark fw-semibold">
+                            WELCOME,
+                        </p>
+                        <h2 class="fw-bold fs-1 mb-4">BUILDING STRONGER <br/> COMMUNITIES, TOGETHER</h2>
+                        <h6 class="fw-bold fs-3 mb-4">Top Volunteers & Organizations</h6>
 
-                    <a class="btn btn-primary fw-semibold p-3 fs-5 mt-3 rounded-0" href="#">
-                        Get started
-                    </a>
+                        <a class="btn btn-primary fw-semibold p-3 fs-5 mt-3 rounded-0" th:href="@{/test/login}">
+                            Get started
+                        </a>
+                    </div>
                 </div>
                 <div class="col-md mb-5 mb-md-0 ms-2">
                     <div class="row mb-2">
@@ -55,13 +57,13 @@
                             <div class="col-auto">
                                 <div class="rounded-circle bg-primary text-white d-flex justify-content-center align-items-center"
                                      style="width: 40px; height: 40px;">
-                                    <span style="font-size: 20px;">J</span>
+                                    <span style="font-size: 20px;">V</span>
                                 </div>
                             </div>
 
                             <div class="col">
                                 <h5 class="mb-0" th:text="${vol}">John Doe</h5>
-                                <p class="text-muted mb-0">Software Engineer</p>
+                                <!--<p class="text-muted mb-0">Software Engineer</p>-->
                             </div>
                         </div>
                     </div>
@@ -77,19 +79,88 @@
                             <div class="col-auto">
                                 <div class="rounded-circle bg-primary text-white d-flex justify-content-center align-items-center"
                                      style="width: 40px; height: 40px;">
-                                    <span style="font-size: 20px;">J</span> <!-- Initial or icon -->
+                                    <span style="font-size: 20px;">O</span>
                                 </div>
                             </div>
 
                             <div class="col">
                                 <h5 class="mb-0" th:text="${org}">John Doe</h5>
-                                <p class="text-muted mb-0">Software Engineer</p>
+                                <!--<p class="text-muted mb-0">Software Engineer</p>-->
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
+            <div sec:authorize="isAuthenticated()">
+                <div class="row mt-5 justify-content-around">
+
+                    <div class="col-md mb-5 mb-md-0 ms-2">
+                        <div class="row mb-2">
+                            <h2>Ratings Given <span><i class="bi bi-arrow-down-short text-dark mx-1"></i></span>
+                            </h2>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table table-bordered">
+                                <thead class="thead-light">
+                                <tr class="text-center">
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Ratings</th>
+                                    <th scope="col">Feedback</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <!-- Row -->
+                                <tr class="text-center" th:each="rating : ${ratingsGiven}">
+                                    <td th:text="${rating.givenBy}">Volunteer for Clean-up</td>
+                                    <td>
+                                        <div class="rating-stars">
+                                            <th:block th:each="i : ${#numbers.sequence(1, 5)}">
+                                                <i th:class="${i <= rating.rating} ? 'bi bi-star-fill text-warning' : 'bi bi-star text-muted'"></i>
+                                            </th:block>
+                                        </div>
+                                    </td>
+                                    <td th:text="${rating.feedback}">Beach Clean-Up Org</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </div>
+                    <div class="col-md ms-2">
+                        <div class="row mb-2">
+                            <h2>Ratings Received <span><i class="bi bi-arrow-down-short text-dark mx-1"></i></span>
+                            </h2>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table table-bordered">
+                                <thead class="thead-light">
+                                <tr class="text-center">
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Ratings</th>
+                                    <th scope="col">Feedback</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <!-- Row -->
+                                <tr class="text-center" th:each="rating : ${ratingsTaken}">
+                                    <td th:text="${rating.givenBy}">Volunteer for Clean-up</td>
+                                    <td>
+                                        <div class="rating-stars">
+                                            <th:block th:each="i : ${#numbers.sequence(1, 5)}">
+                                                <i th:class="${i <= rating.rating} ? 'bi bi-star-fill text-warning' : 'bi bi-star text-muted'"></i>
+                                            </th:block>
+                                        </div>
+                                    </td>
+                                    <td th:text="${rating.feedback}">Beach Clean-Up Org</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </main>
 
