--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,7 +15,7 @@ main {
     margin-top:60px;
     flex-grow: 1;
     display: flex; /* Make it a flex container */
-    justify-content: center;  Center horizontally
+    justify-content: center;
 }
 
 footer {
