--- a/src/main/resources/templates/registerPage.html
+++ b/src/main/resources/templates/registerPage.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,7 +19,7 @@
   .content-wrapper {
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
+      min-height: 100%;
   }
 
           main {
@@ -80,7 +81,7 @@
     </div>
 
     <main>
-        <section class="pe-3" id="learn">
+        <section class="p-2 mt-1 mt-md-5" id="learn">
             <div class="container-fluid px-4">
                 <div class="form-container">
                     <h2 class="mt-2 mb-4">Sign Up</h2>
